k8s/infra/common/network/envoy-gateway/app/geoip-updater.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/apps/daemonset_v1.json
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: geoip-updater
spec:
  selector:
    matchLabels:
      app: geoip-updater
  template:
    metadata:
      labels:
        app: geoip-updater
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      securityContext:
        runAsUser: 0
      containers:
        - name: updater
          image: docker.io/curlimages/curl:8.22.0@sha256:58adaa4e8dca9c988bae2aba4ab3434a0bb2da16bbe3f92dec39ec7785166777
          command: ["/bin/sh", "-c"]
          args:
            - |
              [...]
          volumeMounts:
            - name: geoip-storage
              mountPath: /geoip
      volumes:
        - name: geoip-storage
          hostPath:
            path: /data/envoy-geoip
            type: DirectoryOrCreate
